--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "webpack --config webpack.config.js"
+    "production": "cross-env NODE_ENV=production webpack --config webpack.config.js"
   },
   "dependencies": {
     "vue": "^2.2.1",
